--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="section">
     <h2>📬 Contact</h2>
     <p>
-      Email: vigneshc.aero@example.com<br>
+      Email: vigneshc.aero@gmail.com<br>
       LinkedIn: <a href="#">linkedin.com/in/vignesh</a>
     </p>
   </div>
